--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'cURL AxiosJS updated'
-description: 'cURL action to perform REST API based on Axios'
+name: 'cURL AxiosJS'
+description: 'cURL action to perform REST API based on Axios. This action has been upgraded to run on node.js 20 and higher.'
 inputs:
   url: 
     description: 'The target url'
