--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'cURL AxiosJS updated'
-description: 'cURL action to perform REST API based on Axios. This action runs on node.js 20 and higher and also includes a fix for setup-Output command depraction errors in workflows. 
+description: 'cURL action to perform REST API based on Axios. This action runs on node.js 20 and higher as well as includes a fix for setup-Output command depraction errors in workflows. 
 '
 inputs:
   url: 
